reverted toList() modifications. Now uses collect.(Collectors.toList()). All tests passing.